# api-rossmann

./: README.md  handler.py  pyproject.toml  requirements.txt  rossmann-bot.py
model/: model_rossmann.pkl
parameter/: competition_distance_scaler.pkl  promo_time_week_scaler.pkl  year_scaler.pkl
rossmann/: Rossmann.py
